fix: horizontal scrolling happend because of too large elements

--- a/src/styles/photoList.styl
+++ b/src/styles/photoList.styl
@@ -3,7 +3,9 @@
 :local
 
     .pho-section
-        left-spaced(32px)
+        box-sizing border-box
+        left-padded(32px)
+        right-padded(32px)
         bottom-spaced(2em)
 
     .pho-photo
